# Package-Release-Lightweight-CLI-based-Screen-Activity-Monitoring

./: .gitignore  README.md  pyproject.toml
screentracker/: analytics.py  database.py  heatmap.py  idle.py  monitor.py  runtime_state.py  single_instance_lock.py  stats.py  storage.py  tracker.py
